--- a/Diplom_Django/templates/home.html
+++ b/Diplom_Django/templates/home.html
@@ -5,13 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
     <style>
-        body {
-            background-color: #F5F5DC;
-            color: #222;
-        }
-        .centered {
-            text-align: center;
-        }
+        body {background-color: #F5F5DC; color: #222;}
+        .centered {text-align: center;}
     </style>
 </head>
 <body>
