--- a/Diplom_Django/templates/details.html
+++ b/Diplom_Django/templates/details.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ post.title }}</title>
-</head>
-<body>
-    <h1>{{ post.title }}</h1>
+{% extends "base.html" %}
+
+{% block content %}
+    <h2>{{ post.title }}</h2>
     <p>{{ post.info }}</p>
-    <small>Создано: {{ post.created_at }}</small>
-    <br>
-    <a href="{% url 'home' %}">Назад к списку постов</a>
-</body>
-</html>
+    <p><small>Создано: {{ post.created_at }}</small></p>
+    <a href="{% url 'home' %}"><button>Назад к списку постов</button></a><br>
+    <form method="post" action="{% url 'post_delete' slug=post.slug %}" style="display:inline;">
+        {% csrf_token %}
+        <button type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот пост?');">Удалить пост</button>
+    </form>
+{% endblock %}
