--- a/Diplom_Django/templates/home.html
+++ b/Diplom_Django/templates/home.html
@@ -1,28 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <style>
-        body {background-color: #F5F5DC; color: #222;}
-        .centered {text-align: center;}
-    </style>
-</head>
-<body>
-    <header class='centered'>
-        <h1>Posts</h1>
-    </header>
-    <ul>
-        {% for post in posts %}
-            <li>
-                <h3><a href="{% url 'details' post.slug %}">{{ post.title }}</a></h3>
-                <p>{{ post.rezume }}</p>
-                <small>Создано: {{ post.created_at }}</small>
-            <li>
-        {% empty %}
-            <li>Нет записей блога.</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h2 class="centered">Список постов</h2>
+    <a href="{% url 'new_post_form' %}">Добавить новый пост</a>
+    {% for post in posts %}
+        <div class="post">
+            <h2><a href="{% url 'details' slug=post.slug %}">{{ post.title }}</a></h2>
+            <p>{{ post.rezume }}</p>
+            <p><small>Создано: {{ post.created_at }}</small></p>
+        </div>
+    {% endfor %}
+{% endblock %}
