--- a/Diplom_Django/templates/details.html
+++ b/Diplom_Django/templates/details.html
@@ -3,10 +3,11 @@
 {% block content %}
     <h2>{{ post.title }}</h2>
     <p>{{ post.info }}</p>
-    <p><small>Создано: {{ post.created_at }}</small></p>
+    <p><small>Создано: {{ post.created_at|date:"d.m.Y H:i" }}</small></p>
     <a href="{% url 'home' %}"><button>Назад к списку постов</button></a><br>
     <form method="post" action="{% url 'post_delete' slug=post.slug %}" style="display:inline;">
         {% csrf_token %}
-        <button type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот пост?');">Удалить пост</button>
+        <button type="submit"
+                onclick="return confirm('Вы уверены, что хотите удалить этот пост?');">Удалить пост</button>
     </form>
 {% endblock %}
