--- a/Diplom_Django/templates/after_delete.html
+++ b/Diplom_Django/templates/after_delete.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'static.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Пост удален</title>
-    <style>
-        body {background-color: #F5F5DC; color: #222;}
-        .centered {text-align: center;}
-    </style>
 </head>
 <body>
     <h1>Пост "{{ title }}" был успешно удален!</h1>
