--- a/Diplom_Django/templates/base.html
+++ b/Diplom_Django/templates/base.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'static.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Блог{% endblock %}</title>
-    <style>
-        body {font-family: Arial, sans-serif; background-color: #F5F5DC; color: #222;}
-        .container {max-width: 800px; margin: 0 auto; padding: 20px;}
-        .post {border-bottom: 1px solid #ccc; margin-bottom: 20px; padding-bottom: 20px;}
-        .post h2 a {text-decoration: none; color: #333;}
-        .centered {text-align: center;}
-    </style>
 </head>
 <body>
     <div class="container">
