--- a/Diplom_Django/templates/base.html
+++ b/Diplom_Django/templates/base.html
@@ -9,11 +9,23 @@
 </head>
 <body>
     <div class="container">
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
         <header>
-            <h1 class="centered">Блог пользователя Matveikka</h1>
+            {% if show_header %}
+                <h1 class="centered">Блог пользователя Matveikka</h1>
+            {% endif %}
         </header>
         <main>
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% endblock %}
         </main>
     </div>
 </body>
