--- a/Diplom_Django/templates/details.html
+++ b/Diplom_Django/templates/details.html
@@ -7,7 +7,9 @@
     <a href="{% url 'home' %}"><button>Назад к списку постов</button></a><br>
     <form method="post" action="{% url 'post_delete' slug=post.slug %}" style="display:inline;">
         {% csrf_token %}
+        {% if user.is_superuser %}
         <button type="submit"
                 onclick="return confirm('Вы уверены, что хотите удалить этот пост?');">Удалить пост</button>
+        {% endif %}
     </form>
 {% endblock %}
